...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="Login with Sense Account">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <color key="backgroundColor" red="0.0" green="0.32000000000000001" blue="0.78000000000000003" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="Accept">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Continue">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Continue to Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <rect key="frame" x="10" y="710" width="355" height="44"/>
                                <color key="backgroundColor" red="0.12692853808403015" green="0.31156018376350403" blue="0.74908894300460815" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="select-channel-button" label="Select Channel">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                                                <constraint firstAttribute="width" constant="44" id="WW4-oA-z3z"/>
                                                            </constraints>
                                                            <state key="normal" title="Button" image="arrow-down"/>
                                                            <connections>
                                                                <action selector="datePickerTapped:" destination="OgH-Xl-NzN" eventType="touchUpInside" id="CjI-hi-IH1"/>
...
            <objects>
                <navigationController id="ti7-xg-rMP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Log" image="Log-Active" selectedImage="Log" id="jPM-Xh-CLW"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="lPw-yg-fdr">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
...
            <objects>
                <navigationController id="myb-OP-fNK" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Notifications" image="Notifications" selectedImage="Notifications-Active" id="BTY-wa-lQ2"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="G2J-2y-4BU">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
...
            <objects>
                <navigationController id="k3B-Al-8Ut" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Map" image="Map" selectedImage="Map-Active" id="Xhw-AU-Z4z"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2uC-ka-vpe">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
...
                                        <rect key="frame" x="7.9999999999999858" y="3" width="240.66666666666663" height="40.333333333333336"/>
                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
                                        <state key="normal" title="Enable Location Services">
                                            <color key="titleColor" red="1" green="0.99667738632681413" blue="0.99541662505197637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="7.9999999999999858" y="0.0" width="240.33333333333331" height="45.333333333333336"/>
                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
                                        <state key="normal" title="Enable Push Notifications">
                                            <color key="titleColor" red="0.97734551270000003" green="0.99518093240000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Enable Motion and Activity">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
