...
@implementation DataChannelSelectionViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    
    self.tableView.accessibilityIdentifier = @"channelTable";
    self.tableView.accessibilityLabel = @"channelTable";
    [self.tableView registerNib:[UINib nibWithNibName:@"SelectionTableViewCell" bundle:nil] forCellReuseIdentifier:@"SelectionTableViewCellIdentifier"];
    
    if (!self.channels) {
        self.channels = [NSArray array];
    }
...
